@@ -145,3 +145,4 @@
 091021 cs  wb        Crossreferences on channels added.
 091028 cs  wb        Syntax check works again with new check functions, and SyntaxCheck in configurator popup menu.
 091030 cs  wb        History log in wb.
+091104 cs  wb        Build method for WebGraph objects added.
